--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "description": "Gatsby-React Podcast Template",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Shaun Dawson <iamsdawson@gmail.com>",
   "dependencies": {
     "gatsby": "^2.0.73",
     "gatsby-image": "^2.0.25",
+    "gatsby-plugin-catch-links": "^2.0.9",
     "gatsby-plugin-manifest": "^2.0.12",
     "gatsby-plugin-offline": "^2.0.20",
     "gatsby-plugin-react-helmet": "^3.0.4",
