--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-iframe": "^1.3.3"
   },
   "keywords": [
     "black friends dinner"
