--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Shaun Dawson <iamsdawson@gmail.com>",
   "dependencies": {
+    "bulma": "^0.7.2",
     "gatsby": "^2.0.73",
     "gatsby-image": "^2.0.25",
     "gatsby-plugin-catch-links": "^2.0.9",
@@ -19,6 +20,7 @@
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-bulma-components": "^2.3.0",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-iframe": "^1.3.3"
