--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
-    "react-bulma-components": "^2.3.0",
+    "react-bulma-components": "2.3.0",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-iframe": "^1.3.3",
