--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bulma": "^0.7.2",
     "gatsby": "^2.0.73",
+    "gatsby-cli": "^2.4.8",
     "gatsby-image": "^2.0.25",
     "gatsby-plugin-catch-links": "^2.0.9",
     "gatsby-plugin-manifest": "^2.0.12",
