--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.7.0",
     "react-bulma-components": "2.3.0",
     "react-dom": "^16.7.0",
+    "react-ga": "^2.5.7",
     "react-helmet": "^5.2.0",
     "react-iframe": "^1.3.3",
     "responsive": "^2.0.0",
