--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-cli": "^2.4.8",
     "gatsby-image": "^2.0.25",
     "gatsby-plugin-catch-links": "^2.0.9",
+    "gatsby-plugin-google-analytics": "^2.0.13",
     "gatsby-plugin-manifest": "^2.0.12",
     "gatsby-plugin-offline": "^2.0.20",
     "gatsby-plugin-react-helmet": "^3.0.4",
@@ -25,7 +26,6 @@
     "react": "^16.7.0",
     "react-bulma-components": "2.3.0",
     "react-dom": "^16.7.0",
-    "react-ga": "^2.5.7",
     "react-helmet": "^5.2.0",
     "react-iframe": "^1.3.3",
     "responsive": "^2.0.0",
