--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react": "^16.7.0",
     "react-bulma-components": "2.3.0",
     "react-dom": "^16.7.0",
+    "react-ga": "^2.5.7",
     "react-helmet": "^5.2.0",
+    "react-hubspot-form": "^1.3.7",
     "react-iframe": "^1.3.3",
     "responsive": "^2.0.0",
     "responsive-iframe": "^0.0.1"
